--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "league/csv": "^9.0"
+        "league/csv": "^9.0",
+        "livewire/livewire": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
