--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DISPLAY_TIMEZONE="America/Sao_Paulo"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
