--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "livewire/livewire": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.10.1",
         "mockery/mockery": "^1.3.1",
