--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "league/csv": "^9.0",
+        "league/geotools": "^0.8.1",
         "livewire/livewire": "^2.2"
     },
     "require-dev": {
