--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.10.1",
+        "laravel/envoy": "^2.6",
         "laravel/sail": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
