--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "alpinejs": "^2.8.1",
         "autoprefixer": "^10.2.3",
         "chart.js": "^2.9.4",
+        "enquire.js": "^2.1.6",
         "postcss": "^8.2.4",
         "tailwindcss": "^2.0.2"
     }
