--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.21.1",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^6.0.24",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.2",
         "vue-template-compiler": "^2.6.12"
@@ -22,7 +20,7 @@
         "autoprefixer": "^10.2.3",
         "chart.js": "^2.9.4",
         "enquire.js": "^2.1.6",
-        "postcss": "^8.2.4",
-        "tailwindcss": "^2.0.2"
+        "postcss": "^8.3.5",
+        "tailwindcss": "^2.2.2"
     }
 }
