--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.0.2",
         "blade-ui-kit/blade-icons": "^1.0",
         "doctrine/dbal": "^2.11",
-        "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
         "league/csv": "^9.0",
-        "league/geotools": "^0.8.1",
+        "league/geotools": "^1.0",
         "livewire/livewire": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.10.1",
         "laravel/envoy": "^2.6",
         "laravel/sail": "^1.4",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3",
         "squizlabs/php_codesniffer": "^3.5"
     },
