Atualiza dependências JS

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=d7b719e80cdbfb7e18a0",
-    "/css/app.css": "/css/app.css?id=74524df34e7d2ab4293d"
+    "/js/app.js": "/js/app.js?id=5127c8c360804ad1c3aab12f4a8440ca",
+    "/css/app.css": "/css/app.css?id=029566fdacce261df12252b1c26149ce"
 }
